--- a/style.css
+++ b/style.css
@@ -1991,6 +1991,7 @@ a.phone-button:focus,
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto auto auto;
     gap: 0;
+    row-gap: 0;
     padding: 0 20px !important;
     max-width: 100vw !important;
     width: 100% !important;
@@ -2207,8 +2208,7 @@ a.phone-button:focus,
 @media (max-width: 768px) {
   .footer-language {
     grid-column: 1;
-    grid-row: 4;
-    margin-top: 40px !important;
+    grid-row: 3;
     align-self: start;
     position: relative;
     width: 100%;
@@ -2217,6 +2217,8 @@ a.phone-button:focus,
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
+    margin-top: -224px;
+    padding-top: 294px;
   }
 }
 
